--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@
 }
 
 body {
-  background-color: var(--white);
+  background-color: var(--mid-gray);
   color: var(--primary);
   line-height: 1.6;
 }
@@ -68,7 +68,7 @@ body {
 
 .hero {
 
-    background: url('asssets/final_hero.png') no-repeat;
+  background: url('asssets/final_hero.png') no-repeat;
   background-position: 98% center;
   background-size:cover;
   background-color: var(--tertiary);
@@ -139,6 +139,9 @@ body {
 }
 
 .about {
+   background: url('asssets/skyline_new.jpg') no-repeat;
+   background-size: cover;
+   background-position: 200%  center ;
   background-color: var(--light-gray);
   padding: 3rem 2rem;
   color: var(--primary);
@@ -179,6 +182,7 @@ body {
 }
 
 .projects {
+  
   max-width: 1200px;
   margin: 0 auto;
   padding: 2rem;
